--- a/index_en.html
+++ b/index_en.html
@@ -161,7 +161,7 @@ ul.msr_newslist01 li time {
               <img src="images/fig_CREEVOExperiment.jpg" alt="">
               <div class="description">
                 <h2 style="color: #111111;">
-                  Enhanceablity of Cultural<br>Development with AI
+                  Enhanceability of Cultural<br>Development with AI
                 </h2>
               </div>
 <!--              <a href="">Read More</a>-->
