--- a/index.html
+++ b/index.html
@@ -110,12 +110,12 @@ ul.msr_newslist01 li time {
                 </ul>
               </div>
 
-              <div class="lang_btn-container">
+<!--              <div class="lang_btn-container">
                 <a href="index_en.html">
                   <i class="fa fa-language" aria-hidden="true" style="margin-right: 10px"></i>
                   ENGLISH
                 </a>
-              </div>
+              </div>-->
 
             </div>
           </nav>
