--- a/member.html
+++ b/member.html
@@ -56,12 +56,12 @@
                 </ul>
               </div>
 
-              <div class="lang_btn-container">
+<!--              <div class="lang_btn-container">
                 <a href="index_en.html">
                   <i class="fa fa-language" aria-hidden="true" style="margin-right: 10px"></i>
                   ENGLISH
                 </a>
-              </div>
+              </div>-->
 
             </div>
           </nav>
@@ -89,7 +89,7 @@
       <div class="row g-4 mb-4">
         <div class="col-lg-4 col-md-6 member-item">
           <p class="mb-3">准教授</p>
-          <h4 class="mb-1">中村 栄太</h4>
+          <h4 class="mb-1"><a href="https://eita-nakamura.github.io/index-ja.html">中村 栄太</a></h4>
           <p class="mb-3">Eita Nakamura</p>
           <p class="mb-3 email">nakamura[at]inf.kyushu-u.ac.jp</p>
           <p class="mb-0">音楽知能情報学、芸術進化の数学モデル、学際的物理など</p>
