--- a/member_en.html
+++ b/member_en.html
@@ -55,12 +55,12 @@
                 </ul>
               </div>
 
-              <div class="lang_btn-container">
+<!--              <div class="lang_btn-container">
                 <a href="index.html">
                   <i class="fa fa-language" aria-hidden="true" style="margin-right: 10px"></i>
                   日本語
                 </a>
-              </div>
+              </div>-->
 
             </div>
           </nav>
@@ -88,7 +88,7 @@
       <div class="row g-4 mb-4">
         <div class="col-lg-4 col-md-6 member-item">
           <p class="mb-3">Associate Professor</p>
-          <h4 class="mb-3">Eita Nakamura</h4>
+          <h4 class="mb-3"><a href="https://eita-nakamura.github.io/index.html">Eita Nakamura</a></h4>
           <p class="mb-3 email">nakamura[at]inf.kyushu-u.ac.jp</p>
           <p class="mb-0">Music intellgent informatics, mathematical models of art evolution, interdisciplinary physics, etc.</p>
         </div>
