--- a/publication.html
+++ b/publication.html
@@ -57,12 +57,12 @@
                 </ul>
               </div>
 
-              <div class="lang_btn-container">
+<!--              <div class="lang_btn-container">
                 <a href="index_en.html">
                   <i class="fa fa-language" aria-hidden="true" style="margin-right: 10px"></i>
                   ENGLISH
                 </a>
-              </div>
+              </div>-->
 
             </div>
           </nav>
@@ -85,6 +85,9 @@
 
       <div class="text-center mb-5">
         準備中
+      </div>
+      <div class="text-center mb-5">
+        <a href="https://eita-nakamura.github.io/eita-nakamura_publications.html">業績リスト（暫定版）</a>
       </div>
 
 
