--- a/activity_en.html
+++ b/activity_en.html
@@ -55,12 +55,12 @@
                 </ul>
               </div>
 
-              <div class="lang_btn-container">
+<!--              <div class="lang_btn-container">
                 <a href="index.html">
                   <i class="fa fa-language" aria-hidden="true" style="margin-right: 10px"></i>
                   日本語
                 </a>
-              </div>
+              </div>-->
 
             </div>
           </nav>
