--- a/index_en.html
+++ b/index_en.html
@@ -110,12 +110,12 @@ ul.msr_newslist01 li time {
                 </ul>
               </div>
 
-              <div class="lang_btn-container">
+<!--              <div class="lang_btn-container">
                 <a href="index.html">
                   <i class="fa fa-language" aria-hidden="true" style="margin-right: 10px"></i>
                   日本語
                 </a>
-              </div>
+              </div>-->
 
             </div>
           </nav>
