--- a/publication_en.html
+++ b/publication_en.html
@@ -55,12 +55,12 @@
                 </ul>
               </div>
 
-              <div class="lang_btn-container">
+<!--              <div class="lang_btn-container">
                 <a href="index.html">
                   <i class="fa fa-language" aria-hidden="true" style="margin-right: 10px"></i>
                   日本語
                 </a>
-              </div>
+              </div>-->
 
             </div>
           </nav>
@@ -84,7 +84,9 @@
       <div class="text-center mb-5">
         Now preparing.
       </div>
-
+      <div class="text-center mb-5">
+        <a href="https://eita-nakamura.github.io/eita-nakamura_publications.html">Tentative list of publications</a>
+      </div>
     </div>
 
   </section>
