--- a/index_en.html
+++ b/index_en.html
@@ -198,7 +198,7 @@ ul.msr_newslist01 li time {
               </h2>
             </div>
             <p>
-              The ICE Lab. conducts research on the mechanisms of intelligence and evolutionary phenomena that support artistic cultures. We also conduct research on information technology that contributes to cultural development, with a goal of constructing a unified model describing intellectual activities of creators and audiences as well as the evolution of knowledge distribution within social groups.
+              The ICE Lab. conducts research on the mechanisms of intelligence and evolutionary phenomena that support artistic culture and on information technology that contributes to cultural development. With a goal of constructing a unified model describing intellectual activities of creators and audiences as well as the evolution of knowledge distribution within social groups, our research topics range from fundamental studies on machine learning, data generation models, evolutionary theory, interdisciplinary physics, etc. to information processing techniques of musical, visual, and literary arts. We foster scientists and engineers who can research and develop artificial intelligence technologies from the perspective of social development, based on their expertise in informatics and physics, including advanced machine learning and mathematical theories of evolution.
             <p>
 <!--            <a href="">
               Read More
