--- a/index.html
+++ b/index.html
@@ -298,7 +298,7 @@ ul.msr_newslist01 li time {
               </h5>
               <div class="info_links">
                 <a href="http://www.sigmus.jp/">
-                  情報処理学会 音楽情報科学研究会
+                  情報処理学会 音楽情報科学研究会 (SIGMUS)
                 </a>
                 <a href="https://sites.google.com/view/icetseminar/home">
                   文化進化と知能の理論 (ICET) セミナー
