--- a/member_en.html
+++ b/member_en.html
@@ -111,7 +111,7 @@
       <div class="row g-4 mb-4">
         <div class="col-lg-4 col-md-6 member-item">
           <p class="mb-3">B4</p>
-          <h4 class="mb-3">Sousuke Nishimura</h4>
+          <h4 class="mb-3">Sosuke Nishimura</h4>
           <p class="mb-3 email">email</p>
           <p class="mb-0">Music information processing</p>
         </div>
