--- a/member.html
+++ b/member.html
@@ -114,7 +114,7 @@
         <div class="col-lg-4 col-md-6 member-item">
           <p class="mb-3">B4</p>
           <h4 class="mb-1">西村 草介</h4>
-          <p class="mb-3">Sousuke Nishimura</p>
+          <p class="mb-3">Sosuke Nishimura</p>
           <p class="mb-3 email">email</p>
           <p class="mb-0">音楽情報処理</p>
         </div>
