--- a/join.html
+++ b/join.html
@@ -84,7 +84,11 @@
       </div>
 
       <div class="text-center mb-5">
-        準備中
+        研究室への受入や訪問については、中村 (nakamura(at)inf.kyushu-u.ac.jp) までご連絡ください。
+      </div>
+
+      <div class="text-center mb-5">
+        以下、準備中
       </div>
 
 
