--- a/index.html
+++ b/index.html
@@ -168,12 +168,25 @@ ul.msr_newslist01 li time {
             </div>
           </div>
 
+          <div class="carousel-item">
+            <div class="container">
+              <img src="images/test.jpg" alt="">
+              <div class="description">
+                <h2 style="color: #111111;">
+                  BBQ<br>(2024.6.7)
+                </h2>
+              </div>
+<!--              <a href="">詳しい説明</a>-->
+            </div>
+          </div>
+
         </div>
 
         <ol class="carousel-indicators">
           <li data-target="#customCarousel1" data-slide-to="0" class="active"></li>
           <li data-target="#customCarousel1" data-slide-to="1"></li>
           <li data-target="#customCarousel1" data-slide-to="2"></li>
+          <li data-target="#customCarousel1" data-slide-to="3"></li>
         </ol>
 
       </div>
