--- a/index.html
+++ b/index.html
@@ -170,7 +170,7 @@ ul.msr_newslist01 li time {
 
           <div class="carousel-item">
             <div class="container">
-              <img src="images/test.jpg" alt="">
+              <img src="images/202406_BBQ.jpg" alt="">
               <div class="description">
                 <h2 style="color: #111111;">
                   BBQ<br>(2024.6.7)
