--- a/member.html
+++ b/member.html
@@ -102,7 +102,8 @@
 
       <div class="row g-4 mb-4">
         <div class="col-lg-4 col-md-6 member-item">
-          <h4 class="mb-1">募集中</h4>
+          <h4 class="mb-3">募集中</h4>
+          <p class="mb-3"><a href="https://ice.inf.kyushu-u.ac.jp/join.html"><font color="#0050a0">研究室への受入について</font></a></p>
         </div>
       </div>
 
