--- a/join_en.html
+++ b/join_en.html
@@ -82,7 +82,28 @@
       </div>
 
       <div class="text-center mb-5">
-        Now preparing.
+        Please read the following and for inquiries please contact Eita Nakamura (nakamura(at)inf.kyushu-u.ac.jp).
+      </div>
+
+
+      <div class="text-left mb-5">
+        <h4>Doctoral program</h4>
+        To join our lab as a PhD candidate, it is necessary to pass the entrance exam for <a href="https://www.isee.kyushu-u.ac.jp/e/admissions_doctor.html">the Graduate School of Information Science and Electrical Engineering</a> in Kyushu University. In doctoral research programs, PhD candidates are required to have specialized knowledge and research experience in relevant fields, and their research interests should align with the characteristics of the laboratory. If you wish to apply, please attach your CV and research proposal and contact Nakamura.
+      </div>
+
+      <div class="text-left mb-5">
+        <h4>Master's program</h4>
+        To join our lab as a master student, it is necessary to first pass the entrance exam for <a href="https://www.isee.kyushu-u.ac.jp/e/admissions_master.html">the Graduate School of Information Science and Electrical Engineering</a> in Kyushu University, and then be selected in the process of lab assignment within the quota for our lab. In our laboratory, we pursue basic research based on mathematics and original research topics that others cannot easily pursue. If you are solely interested in applied technologies for music information processing, we recommend carefully considering other universities and laboratories. You can consult continuously about your research theme even before enrollment. If you are interested in applying, please first contact Nakamura.
+      </div>
+
+      <div class="text-left mb-5">
+        <h4>Bachelor's program</h4>
+        We accept students belonging to <a href="https://www.eecs.kyushu-u.ac.jp/e/">Department of Electrical Engineering and Computer Science, School of Engineering</a> and <a href="https://www.phys.kyushu-u.ac.jp/en/">Department of Physics, School of Science</a> for graduation research. For information regarding entrance exams and lab assignment for graduation research, please refer to the respective department's website. We accept inquiries for research guidance and laboratory introductions at any time, so please contact Nakamura.
+      </div>
+
+      <div class="text-left mb-5">
+        <h4>Other ways to join our lab</h4>
+        Basically, we do not accept research students. If you wish to join our lab as a visiting researcher while belonging to another university etc., your should first prepare your own accommodation expenses and other related costs. For inquries regarding research collaborations and news interviews, please contact Eita Nakamura (nakamura(at)inf.kyushu-u.ac.jp).
       </div>
 
     </div>
