--- a/member_en.html
+++ b/member_en.html
@@ -100,9 +100,11 @@
 
       <div class="row g-4 mb-4">
         <div class="col-lg-4 col-md-6 member-item">
-          <h4 class="mb-1">Accepting applications</h4>
+          <h4 class="mb-3">Accepting applications</h4>
+          <p class="mb-3"><a href="https://ice.inf.kyushu-u.ac.jp/join_en.html"><font color="#0050a0">How to join our lab</font></a></p>
         </div>
       </div>
+
 
       <div class="text-center mx-auto mb-3" style="max-width: 600px;">
         <h4>Undergraduate Students</h4>
