--- a/member.html
+++ b/member.html
@@ -89,9 +89,10 @@
       <div class="row g-4 mb-4">
         <div class="col-lg-4 col-md-6 member-item">
           <p class="mb-3">准教授</p>
+          <a href="https://eita-nakamura.github.io/index-ja.html"><img class="fit-picture mb-3" src="./images/Nakamura_1.jpg" height="150" alt="Eita Nakamura" /></a>
           <h4 class="mb-1"><a href="https://eita-nakamura.github.io/index-ja.html">中村 栄太</a></h4>
-          <p class="mb-3">Eita Nakamura</p>
-          <p class="mb-3 email">nakamura[at]inf.kyushu-u.ac.jp</p>
+          <p class="mb-2">Eita Nakamura</p>
+          <p class="mb-2 email">nakamura[at]inf.kyushu-u.ac.jp</p>
           <p class="mb-0">音楽知能情報学、芸術進化の数学モデル、学際的物理など</p>
         </div>
       </div>
@@ -114,16 +115,18 @@
       <div class="row g-4 mb-4">
         <div class="col-lg-4 col-md-6 member-item">
           <p class="mb-3">B4</p>
+          <img class="fit-picture mb-3" src="./images/Nishimura_1.jpg" onmouseover="this.src='./images/Nishimura_2.jpg'" onmouseout="this.src='./images/Nishimura_1.jpg'" height="150" alt="Sosuke Nishimura" />
           <h4 class="mb-1">西村 草介</h4>
-          <p class="mb-3">Sosuke Nishimura</p>
-          <p class="mb-3 email">email</p>
+          <p class="mb-2">Sosuke Nishimura</p>
+          <p class="mb-2 email">nishimura[at]ice.inf.kyushu-u.ac.jp</p>
           <p class="mb-0">音楽情報処理</p>
         </div>
         <div class="col-lg-4 col-md-6 member-item">
           <p class="mb-3">B4</p>
+          <img class="fit-picture mb-3" src="./images/Huga_1.jpg" height="150" alt="Yu Sugimoto" />
           <h4 class="mb-1">杉本 悠</h4>
-          <p class="mb-3">Yu Sugimoto</p>
-          <p class="mb-3 email">email</p>
+          <p class="mb-2">Yu Sugimoto</p>
+          <p class="mb-2 email">sugimoto[at]ice.inf.kyushu-u.ac.jp</p>
           <p class="mb-0">音楽情報処理</p>
         </div>
       </div>
