--- a/member_en.html
+++ b/member_en.html
@@ -88,6 +88,7 @@
       <div class="row g-4 mb-4">
         <div class="col-lg-4 col-md-6 member-item">
           <p class="mb-3">Associate Professor</p>
+          <a href="https://eita-nakamura.github.io/index.html"><img class="fit-picture mb-3" src="./images/Nakamura_1.jpg" height="150" alt="Eita Nakamura" /></a>
           <h4 class="mb-3"><a href="https://eita-nakamura.github.io/index.html">Eita Nakamura</a></h4>
           <p class="mb-3 email">nakamura[at]inf.kyushu-u.ac.jp</p>
           <p class="mb-0">Music intellgent informatics, mathematical models of art evolution, interdisciplinary physics, etc.</p>
@@ -113,14 +114,16 @@
       <div class="row g-4 mb-4">
         <div class="col-lg-4 col-md-6 member-item">
           <p class="mb-3">B4</p>
+          <img class="fit-picture mb-3" src="./images/Nishimura_1.jpg" onmouseover="this.src='./images/Nishimura_2.jpg'" onmouseout="this.src='./images/Nishimura_1.jpg'" height="150" alt="Sosuke Nishimura" />
           <h4 class="mb-3">Sosuke Nishimura</h4>
-          <p class="mb-3 email">email</p>
+          <p class="mb-2 email">nishimura[at]ice.inf.kyushu-u.ac.jp</p>
           <p class="mb-0">Music information processing</p>
         </div>
         <div class="col-lg-4 col-md-6 member-item">
           <p class="mb-3">B4</p>
+          <img class="fit-picture mb-3" src="./images/Huga_1.jpg" height="150" alt="Yu Sugimoto" />
           <h4 class="mb-3">Yu Sugimoto</h4>
-          <p class="mb-3 email">email</p>
+          <p class="mb-2 email">sugimoto[at]ice.inf.kyushu-u.ac.jp</p>
           <p class="mb-0">Music information processing</p>
         </div>
       </div>
