--- a/access.html
+++ b/access.html
@@ -84,9 +84,36 @@
       </div>
 
       <div class="text-center mb-5">
-        準備中
+        文化知能科学研究室<br>
+        〒819-0395 福岡県福岡市西区元岡744<br>
+        九州大学伊都キャンパス ウエスト4号館305室<br>
       </div>
 
+      <div class="text-center mb-5">
+        <h5>伊都キャンパスへのアクセス</h5>
+        最寄りのバス停は「九大工学部前」です。<br>
+        <br>
+        <iframe src="https://www.kyushu-u.ac.jp/f/47288/access_JA02.pdf" width="600" height="485" style="border: none;"></iframe>
+        <br>
+        うまく表示されない場合は、<a href="https://www.kyushu-u.ac.jp/f/47288/access_JA02.pdf">こちらをご覧ください</a>。<br><br>
+        昭和バス時刻表：<a href="https://transfer.navitime.biz/showa-bus/pc/diagram/LinkSearch?nodeId=00291944">九大学研都市駅から九大</a>　<a href="https://transfer.navitime.biz/showa-bus/pc/diagram/LinkSearch?nodeId=00087911">九大から九大学研都市駅</a><br>
+        
+        西鉄バス時刻表：<a href="https://jik.nishitetsu.jp/busroute?f=busikisaki&list=0000,D00205">博多駅から九大</a>　<a href="https://jik.nishitetsu.jp/busroute?f=busikisaki&list=0001,563170&ns=1">九大から博多駅</a><br>
+        <a href="https://www.nishitetsu.jp/userfiles/page_contents/81050862d79f05f2a7fbc7949478a1f8.pdf">博多駅のりば（A）</a>　
+        <a href="https://www.nishitetsu.jp/userfiles/page_contents/81050862d79f05f2a7fbc7949478a1f8.pdf">天神周辺のりば（2Bか3）</a>
+      </div>
+
+      <div class="text-center mb-5">
+        <h5>キャンパス内バス停から研究室までのアクセス</h5>
+        <br>
+        <iframe src="images/LabAccessMap.pdf" width="600" height="485" style="border: none;"></iframe>
+        <br>
+        うまく表示されない場合は、<a href="images/LabAccessMap.pdf">こちらをご覧ください</a>。
+      </div>
+
+      <div class="text-center mb-5">
+        車やタクシーでお越しの場合は、<a href="https://www.kyushu-u.ac.jp/ja/campus/ito/">こちらをご覧ください</a>。
+      </div>
 
     </div>
   </section>
