--- a/access.html
+++ b/access.html
@@ -86,7 +86,8 @@
       <div class="text-center mb-5">
         文化知能科学研究室<br>
         〒819-0395 福岡県福岡市西区元岡744<br>
-        九州大学伊都キャンパス ウエスト4号館305室<br>
+        <a href="https://www.google.com/maps/place/33%C2%B035'42.6%22N+130%C2%B012'58.4%22E">九州大学伊都キャンパス ウエスト4号館305室</a><br>
+        <br>
       </div>
 
       <div class="text-center mb-5">
