--- a/access.html
+++ b/access.html
@@ -107,9 +107,9 @@
       <div class="text-center mb-5">
         <h5>キャンパス内バス停から研究室までのアクセス</h5>
         <br>
-        <iframe src="images/LabAccessMap.pdf" width="600" height="485" style="border: none;"></iframe>
+        <iframe src="images/LabAccessMap_ja.pdf" width="600" height="485" style="border: none;"></iframe>
         <br>
-        うまく表示されない場合は、<a href="images/LabAccessMap.pdf">こちらをご覧ください</a>。
+        うまく表示されない場合は、<a href="images/LabAccessMap_ja.pdf">こちらをご覧ください</a>。
       </div>
 
       <div class="text-center mb-5">
