--- a/access_en.html
+++ b/access_en.html
@@ -82,7 +82,25 @@
       </div>
 
       <div class="text-center mb-5">
-        Now preparing.
+        Intelligence and Cultural Evolution Laboratory<br>
+        <a href="https://www.google.com/maps/place/33%C2%B035'42.6%22N+130%C2%B012'58.4%22E">West 4 Room 305, Kyushu University Ito Campus</a><br>
+        Motooka 744, Nishi-ku, Fukuoka 819-0395, Japan<br>
+      </div>
+
+      <div class="text-center mb-5">
+        <h5>Access to Ito Campus</h5>
+        <br>
+        <iframe src="https://www.kyushu-u.ac.jp/f/47293/access_E02.pdf" width="600" height="485" style="border: none;"></iframe>
+        <br>
+        If you cannot view the image, <a href="https://www.kyushu-u.ac.jp/f/47293/access_E02.pdf">please see here</a>.
+      </div>
+
+      <div class="text-center mb-5">
+        <h5>From the nearest bus stop to ICE Lab.</h5>
+        <br>
+        <iframe src="images/LabAccessMap.pdf" width="600" height="485" style="border: none;"></iframe>
+        <br>
+        If you cannot view the image, <a href="images/LabAccessMap.pdf">please see here</a>.
       </div>
 
     </div>
