--- a/access.html
+++ b/access.html
@@ -94,9 +94,9 @@
         <h5>伊都キャンパスへのアクセス</h5>
         最寄りのバス停は「九大工学部前」です。<br>
         <br>
-        <iframe src="https://www.kyushu-u.ac.jp/f/47288/access_JA02.pdf" width="600" height="485" style="border: none;"></iframe>
+        <img src="./images/CampusAccessMap_ja.jpg" width="600" alt="Campus Access Map" />
         <br>
-        うまく表示されない場合は、<a href="https://www.kyushu-u.ac.jp/f/47288/access_JA02.pdf">こちらをご覧ください</a>。<br><br>
+        <a href="https://www.kyushu-u.ac.jp/f/47288/access_JA02.pdf">PDFファイルで表示する</a><br><br>
         昭和バス時刻表：<a href="https://transfer.navitime.biz/showa-bus/pc/diagram/LinkSearch?nodeId=00291944">九大学研都市駅から九大</a>　<a href="https://transfer.navitime.biz/showa-bus/pc/diagram/LinkSearch?nodeId=00087911">九大から九大学研都市駅</a><br>
         
         西鉄バス時刻表：<a href="https://jik.nishitetsu.jp/busroute?f=busikisaki&list=0000,D00205">博多駅から九大</a>　<a href="https://jik.nishitetsu.jp/busroute?f=busikisaki&list=0001,563170&ns=1">九大から博多駅</a><br>
@@ -107,9 +107,9 @@
       <div class="text-center mb-5">
         <h5>キャンパス内バス停から研究室までのアクセス</h5>
         <br>
-        <iframe src="images/LabAccessMap_ja.pdf" width="600" height="485" style="border: none;"></iframe>
+        <img class="mb-3" src="./images/LabAccessMap_ja.jpg" width="600" alt="Lab Access Map" />
         <br>
-        うまく表示されない場合は、<a href="images/LabAccessMap_ja.pdf">こちらをご覧ください</a>。
+        <a href="images/LabAccessMap_ja.pdf">PDFファイルで表示する</a>
       </div>
 
       <div class="text-center mb-5">
