--- a/access_en.html
+++ b/access_en.html
@@ -90,17 +90,18 @@
       <div class="text-center mb-5">
         <h5>Access to Ito Campus</h5>
         <br>
-        <iframe src="https://www.kyushu-u.ac.jp/f/47293/access_E02.pdf" width="600" height="485" style="border: none;"></iframe>
+        <img src="./images/CampusAccessMap.jpg" width="600" alt="Campus Access Map" />
         <br>
-        If you cannot view the image, <a href="https://www.kyushu-u.ac.jp/f/47293/access_E02.pdf">please see here</a>.
+        <a href="https://www.kyushu-u.ac.jp/f/47293/access_E02.pdf">See a PDF version</a>
       </div>
 
       <div class="text-center mb-5">
         <h5>From the nearest bus stop to ICE Lab.</h5>
         <br>
-        <iframe src="images/LabAccessMap.pdf" width="600" height="485" style="border: none;"></iframe>
+        <img class="mb-3" src="./images/LabAccessMap.jpg" width="600" alt="Lab Access Map" />
         <br>
-        If you cannot view the image, <a href="images/LabAccessMap.pdf">please see here</a>.
+        <a href="./images/LabAccessMap.pdf">See a PDF version</a>
+<!--        If you cannot view the image, <a href="images/LabAccessMap.pdf">please see here</a>.-->
       </div>
 
     </div>
