--- a/index_en.html
+++ b/index_en.html
@@ -105,6 +105,7 @@ ul.msr_newslist01 li time {
                   <li class="nav-item"><a class="nav-link" href="research_en.html">Research</a></li>
                   <li class="nav-item"><a class="nav-link" href="publication_en.html">Publications</a></li>
                   <li class="nav-item"><a class="nav-link" href="activity_en.html">Activities</a></li>
+                  <li class="nav-item"><a class="nav-link" href="seminar_en.html">Seminar</a></li>
                   <li class="nav-item"><a class="nav-link" href="join_en.html">Join Us</a></li>
                   <li class="nav-item"><a class="nav-link" href="access_en.html">Access</a></li>
                 </ul>
