--- a/seminar.html
+++ b/seminar.html
@@ -17,6 +17,60 @@
   <link href="css/style.css" rel="stylesheet" />
   <link href="css/responsive.css" rel="stylesheet" />
 
+  <style>
+    ul.pub {line-height: 20px;}
+    ul.pub li {margin-bottom: 10px;}
+
+.msr_newslist01 {
+  padding: 0px;
+}
+
+.msr_newslist01 li {
+  width: 100%;
+<!--  border-bottom: 1px solid #AAAAAA;-->
+  font-size: 14px;
+  list-style-type: none;
+<!--  margin: 0px;
+  padding: 0px;-->
+}
+.msr_newslist01 li a {
+  box-sizing: border-box;
+  color: #000000;
+  display: table;
+<!--  padding: 5px;-->
+  padding: 10px 5px;
+  text-decoration: none;
+  transition: 0.2s ease-in-out;
+  -o-transition: 0.2s ease-in-out;
+  -moz-transition: 0.2s ease-in-out;
+  -webkit-transition: 0.2s ease-in-out;
+  width: 100%;
+}
+.msr_newslist01 li a:hover {
+  background: #EEEEEE;
+  text-decoration: none;
+}
+.msr_newslist01 li div {
+  display: table-cell;
+  width: 144px;
+  vertical-align: middle;
+  margin: 0px;
+  padding: 0px;
+}
+.msr_newslist01 li p {
+  display: table-cell;
+  padding-left: 20px;
+  vertical-align: middle;
+}
+
+/* 時間の設定 */
+ul.msr_newslist01 li time {
+  display: table-cell;
+  vertical-align: top;
+  width: 200px;
+}
+
+  </style>
 
 </head>
 
@@ -81,31 +135,15 @@
     <div class="container">
 
       <div class="text-center mx-auto mb-4">
-        <h2>研究室への受入</h2>
+        <h2>文化知能科学セミナー</h2>
+        研究室で開催しているセミナーで外部の研究者を招待して講演会を行っています。
       </div>
 
-      <div class="text-center mb-5">
-        以下を読んだ上でのお問い合わせは、中村 (nakamura(at)inf.kyushu-u.ac.jp) までお願いします。
-      </div>
 
-      <div class="text-left mb-5">
-        <h4>博士後期課程</h4>
-        博士後期課程学生として当研究室に所属するには、九州大学大学院システム情報科学府情報理工学専攻の<a href="https://www.isee.kyushu-u.ac.jp/admissions_doctor.html">入学試験</a>に合格することが必要です。博士後期課程での研究では、関連分野の専門知識と研究経験、研究室の特色と合う研究の興味が必要になります。受験を希望される方は、履歴書や研究計画書を添付の上、中村までご連絡ください。
-      </div>
-
-      <div class="text-left mb-5">
-        <h4>修士課程</h4>
-        修士課程学生として当研究室に所属するには、九州大学大学院システム情報科学府情報理工学専攻の<a href="https://www.isee.kyushu-u.ac.jp/admissions_master.html">入学試験</a>に合格した上で、研究室配属で当研究室の定員内に選ばれることが必要です。当研究室では、数学に基づく基礎研究や、他の人にはできない独創的な研究テーマを重要視しています。音楽情報処理の応用技術にのみ興味がある方は、他の大学・研究室も慎重に検討してください。研究テーマについては、入学前から継続的に相談することが可能です。受験を希望される方は、まず、中村までご連絡ください。
-      </div>
-
-      <div class="text-left mb-5">
-        <h4>学士課程</h4>
-        当研究室では、九州大学<a href="https://www.eecs.kyushu-u.ac.jp/">工学部電気情報工学科</a>および<a href="https://www.phys.kyushu-u.ac.jp/">理学部物理学科情報理学コース</a>から卒業研究の学生を受け入れています。入学試験および卒研配属については、各学科のWebページを見てください。進路相談や研究室紹介は随時受け付けていますので、中村までご連絡ください。
-      </div>
-
-      <div class="text-left mb-5">
-        <h4>その他の形での受入</h4>
-        研究生の受入は原則、行っていません。他の大学等に所属しながら、当研究室で一時的に研究されたい場合は、滞在費等は各自で準備していただく必要があります。共同研究や取材などのお問い合わせは、中村 (nakamura(at)inf.kyushu-u.ac.jp) までご連絡ください。
+      <hr>
+      <div class="text-center mx-auto mb-4">
+        (1) 2024.10.30 北原鉄朗氏（日本大学）<br>
+        「音に関する研究の紹介：北原研究室の事例に基づいて」
       </div>
 
     </div>
