--- a/seminar_en.html
+++ b/seminar_en.html
@@ -16,6 +16,61 @@
   <link href="css/style.css" rel="stylesheet" />
   <link href="css/responsive.css" rel="stylesheet" />
 
+  <style>
+    ul.pub {line-height: 20px;}
+    ul.pub li {margin-bottom: 10px;}
+
+.msr_newslist01 {
+  padding: 0px;
+}
+
+.msr_newslist01 li {
+  width: 100%;
+<!--  border-bottom: 1px solid #AAAAAA;-->
+  font-size: 14px;
+  list-style-type: none;
+<!--  margin: 0px;
+  padding: 0px;-->
+}
+.msr_newslist01 li a {
+  box-sizing: border-box;
+  color: #000000;
+  display: table;
+<!--  padding: 5px;-->
+  padding: 10px 5px;
+  text-decoration: none;
+  transition: 0.2s ease-in-out;
+  -o-transition: 0.2s ease-in-out;
+  -moz-transition: 0.2s ease-in-out;
+  -webkit-transition: 0.2s ease-in-out;
+  width: 100%;
+}
+.msr_newslist01 li a:hover {
+  background: #EEEEEE;
+  text-decoration: none;
+}
+.msr_newslist01 li div {
+  display: table-cell;
+  width: 144px;
+  vertical-align: middle;
+  margin: 0px;
+  padding: 0px;
+}
+.msr_newslist01 li p {
+  display: table-cell;
+  padding-left: 20px;
+  vertical-align: middle;
+}
+
+/* 時間の設定 */
+ul.msr_newslist01 li time {
+  display: table-cell;
+  vertical-align: top;
+  width: 200px;
+}
+
+  </style>
+
 </head>
 
 <body>
@@ -79,30 +134,14 @@
     <div class="container">
 
       <div class="text-center mx-auto mb-4">
-        <h2>Access to ICE Lab.</h2>
+        <h2>ICE Seminar</h2>
+        We invite external researchers for seminars in our lab.
       </div>
 
-      <div class="text-center mb-5">
-        Intelligence and Cultural Evolution Laboratory<br>
-        <a href="https://www.google.com/maps/place/33%C2%B035'42.6%22N+130%C2%B012'58.4%22E">West 4 Room 305, Kyushu University Ito Campus</a><br>
-        Motooka 744, Nishi-ku, Fukuoka 819-0395, Japan<br>
-      </div>
-
-      <div class="text-center mb-5">
-        <h5>Access to Ito Campus</h5>
-        <br>
-        <img src="./images/CampusAccessMap.jpg" width="600" alt="Campus Access Map" />
-        <br>
-        <a href="https://www.kyushu-u.ac.jp/f/47293/access_E02.pdf">See a PDF version</a>
-      </div>
-
-      <div class="text-center mb-5">
-        <h5>From the nearest bus stop to ICE Lab.</h5>
-        <br>
-        <img class="mb-3" src="./images/LabAccessMap.jpg" width="600" alt="Lab Access Map" />
-        <br>
-        <a href="./images/LabAccessMap.pdf">See a PDF version</a>
-<!--        If you cannot view the image, <a href="images/LabAccessMap.pdf">please see here</a>.-->
+      <hr>
+      <div class="text-center mx-auto mb-4">
+        (1) 2024.10.30 Prof. Tetsuro Kitahara (Nihon University)<br>
+        “Introducing research on sound: studies at Kitahara Lab”
       </div>
 
     </div>
