--- a/research.html
+++ b/research.html
@@ -52,6 +52,7 @@
                   <li class="nav-item"><a class="nav-link" href="research.html">研究内容</a></li>
                   <li class="nav-item"><a class="nav-link" href="publication.html">業績</a></li>
                   <li class="nav-item"><a class="nav-link" href="activity.html">活動報告</a></li>
+                  <li class="nav-item"><a class="nav-link" href="seminar.html">セミナー</a></li>
                   <li class="nav-item"><a class="nav-link" href="join.html">研究室への受入</a></li>
                   <li class="nav-item"><a class="nav-link" href="access.html">アクセス</a></li>
                 </ul>
