--- a/index_en.html
+++ b/index_en.html
@@ -310,7 +310,7 @@ ul.msr_newslist01 li time {
                 Links
               </h5>
               <div class="info_links">
-                <a href="http://www.sigmus.jp/">
+                <a href="https://ipsj-sigmus.sakura.ne.jp/sigmus/">
                   Information Processing Society of Japan SIGMUS
                 </a>
                 <a href="https://sites.google.com/view/icetseminar/home">
