--- a/ExpNishi2/ExpNishi2.html
+++ b/ExpNishi2/ExpNishi2.html
@@ -4,8 +4,7 @@
 <head>
 	<meta charset='utf-8'>
 	<meta http-equiv="X-UA-Compatible" content="chrome=1">
-<!--	<link rel="stylesheet" type="text/css" media="screen" href="https://creevomusic.github.io/exp/stylesheets/stylesheet.css">-->
-	<link rel="stylesheet" type="text/css" media="screen" href="./stylesheets/stylesheet.css">
+	<link rel="stylesheet" type="text/css" media="screen" href="https://creevomusic.github.io/exp/stylesheets/stylesheet.css">
 
 	<title>ExpNishi2</title>
 
@@ -249,8 +248,7 @@
 
 		<div style="height:30px;"></div>
 
-<!--		<input id="sendButton" type="button" name="sendButton" value="聴き比べに進む" disabled/>-->
-		<input id="sendButton" type="button" name="sendButton" value="聴き比べに進む"/>
+		<input id="sendButton" type="button" name="sendButton" value="聴き比べに進む" disabled/>
 		<label id="labelSendButton" for="sendButton">聴き比べに進む</label>
 
 		<div style="height:20px;"></div>
@@ -278,8 +276,7 @@
 	</div>
 
 
-<!--	<script src="https://creevomusic.github.io/exp/jquery.js"></script>-->
-	<script src="jquery.js"></script>
+	<script src="https://creevomusic.github.io/exp/jquery.js"></script>
 	<script src="ExpNishi2_data_info.js"></script>
 	<script src="ExpNishi2.js"></script>
 
