--- a/ExpNishi2/ExpNishi2.html
+++ b/ExpNishi2/ExpNishi2.html
@@ -277,7 +277,8 @@
 
 
 	<script src="https://creevomusic.github.io/exp/jquery.js"></script>
-	<script src="ExpNishi2_data_info.js"></script>
+	<script src="ExpNishi2_vocal_data_info.js"></script>
+	<script src="ExpNishi2_instr_data_info.js"></script>
 	<script src="ExpNishi2.js"></script>
 
 </body>
