--- a/ExpNishi2/thankyou.html
+++ b/ExpNishi2/thankyou.html
@@ -38,6 +38,11 @@
 
 			<div style="height:20px;"></div>
 
+			よろしければ、感想などを以下のフォームから回答お願いします。<br>
+			<h3><a href="https://forms.gle/9qKYjQrcM2zmgX6p6">実験後のアンケート回答フォーム</a></h3>
+
+			<div style="height:20px;"></div>
+
 			<h4><a href="https://creevo-music.com">自動作曲システム CREEVO を使ってみる</a></h4>
 
 		</div>
