--- a/ExpNishi2/ExpNishi2.html
+++ b/ExpNishi2/ExpNishi2.html
@@ -106,7 +106,9 @@
 
 	<div style="margin-left:auto; margin-right:auto; width:95%; text-align:center; padding: 0px 20px 20px 20px;">
 
-		<h4 id="main_sentence">はじめに、次の質問に答えてください</h4>
+		<h3 id="main_sentence">この実験は終了しました。ご協力ありがとうございました。</h3>
+
+<!--		<h4 id="main_sentence">はじめに、次の質問に答えてください</h4>
 		<div style="height:20px;"></div>
 		<h3 id="lyrics_sentence"></h3>
 
@@ -124,7 +126,8 @@
 					<div style="height:10px;"></div>
 					<div><audio id="Audio1A" controls preload="metadata" src="">エラー</audio><br></div>
 					<div style="height:50px;"></div>
-				</div>
+				</div>-->
+
 <!--				<div style="height:40px;"></div>-->
 <!--				<div>
 					<div id="ratingBoxA" class="rating box-clickable" style="">
@@ -143,7 +146,8 @@
 					</div>
 					<div id="popup_descriptionA">曲を評価（任意）</div>
 				</div>-->
-				<div style="height:20px;"></div>
+
+<!--				<div style="height:20px;"></div>
 			</div>
 
 			<div id="boxSpacer" style="width:5%;" hidden></div>
@@ -158,7 +162,8 @@
 					<div style="height:10px;"></div>
 					<div><audio id="Audio1B" controls preload="metadata" src="">エラー</audio><br></div>
 					<div style="height:50px;"></div>
-				</div>
+				</div>-->
+
 <!--				<div style="height:40px;"></div>-->
 <!--				<div>
 					<div id="ratingBoxB" class="rating box-clickable" style="">
@@ -177,7 +182,8 @@
 					</div>
 					<div id="popup_descriptionB">曲を評価（任意）</div>
 				</div>-->
-				<div style="height:20px;"></div>
+
+<!--				<div style="height:20px;"></div>
 			</div>
 
 			<div id="questionnare">
@@ -255,7 +261,7 @@
 
 		<div id="ShowWorkCounter"></div>
 		<div id="report_sentence"></div>
-		<div id="exit_sentence"></div>
+		<div id="exit_sentence"></div>-->
 
 	</div>
 
