--- a/ExpNishi2/ExpNishi2.html
+++ b/ExpNishi2/ExpNishi2.html
@@ -96,6 +96,8 @@
 	<div id="header_wrap" class="outer" style="text-align:center;">
 		<header class="inner">
 			<h3 id="head_sentence"><font color="#ffffff">メロディー聴取実験</font></h3>
+			<h3 id="head_sentence"><font color="#ffffff">この実験は終了しており、もうデータを集めていません。</font></h3>
+			<h3 id="head_sentence"><font color="#ffffff">ご協力ありがとうございました。</font></h3>
 		</header>
 	</div>
 
@@ -106,9 +108,9 @@
 
 	<div style="margin-left:auto; margin-right:auto; width:95%; text-align:center; padding: 0px 20px 20px 20px;">
 
-		<h3 id="main_sentence">この実験は終了しました。ご協力ありがとうございました。</h3>
+		<h3 id="main_sentence"></h3>
 
-<!--		<h4 id="main_sentence">はじめに、次の質問に答えてください</h4>
+		<h4 id="main_sentence">はじめに、次の質問に答えてください</h4>
 		<div style="height:20px;"></div>
 		<h3 id="lyrics_sentence"></h3>
 
@@ -126,7 +128,7 @@
 					<div style="height:10px;"></div>
 					<div><audio id="Audio1A" controls preload="metadata" src="">エラー</audio><br></div>
 					<div style="height:50px;"></div>
-				</div>-->
+				</div>
 
 <!--				<div style="height:40px;"></div>-->
 <!--				<div>
@@ -147,7 +149,7 @@
 					<div id="popup_descriptionA">曲を評価（任意）</div>
 				</div>-->
 
-<!--				<div style="height:20px;"></div>
+				<div style="height:20px;"></div>
 			</div>
 
 			<div id="boxSpacer" style="width:5%;" hidden></div>
@@ -162,7 +164,7 @@
 					<div style="height:10px;"></div>
 					<div><audio id="Audio1B" controls preload="metadata" src="">エラー</audio><br></div>
 					<div style="height:50px;"></div>
-				</div>-->
+				</div>
 
 <!--				<div style="height:40px;"></div>-->
 <!--				<div>
@@ -183,7 +185,7 @@
 					<div id="popup_descriptionB">曲を評価（任意）</div>
 				</div>-->
 
-<!--				<div style="height:20px;"></div>
+				<div style="height:20px;"></div>
 			</div>
 
 			<div id="questionnare">
@@ -261,7 +263,7 @@
 
 		<div id="ShowWorkCounter"></div>
 		<div id="report_sentence"></div>
-		<div id="exit_sentence"></div>-->
+		<div id="exit_sentence"></div>
 
 	</div>
 
