--- a/member.html
+++ b/member.html
@@ -124,7 +124,7 @@
         </div>
         <div class="col-lg-4 col-md-6 member-item">
           <p class="mb-3">B4</p>
-          <img class="fit-picture mb-3" src="./images/Huga_1.jpg" height="150" alt="Yu Sugimoto" />
+          <img class="fit-picture mb-3" src="./images/Sugimoto_1.jpg" height="150" alt="Yu Sugimoto" />
           <h4 class="mb-1">杉本 悠</h4>
           <p class="mb-2">Yu Sugimoto</p>
           <p class="mb-2 email">sugimoto[at]ice.inf.kyushu-u.ac.jp</p>
@@ -139,7 +139,7 @@
 
   <footer class="footer_section">
     <div class="container">
-      <p>&copy; 2024 All Rights Reserved by ICE Lab.</p>
+      <p>&copy; 2025 All Rights Reserved by ICE Lab.</p>
     </div>
   </footer>
 
