--- a/member_en.html
+++ b/member_en.html
@@ -122,7 +122,7 @@
         </div>
         <div class="col-lg-4 col-md-6 member-item">
           <p class="mb-3">B4</p>
-          <img class="fit-picture mb-3" src="./images/Huga_1.jpg" height="150" alt="Yu Sugimoto" />
+          <img class="fit-picture mb-3" src="./images/Sugimoto_1.jpg" height="150" alt="Yu Sugimoto" />
           <h4 class="mb-3">Yu Sugimoto</h4>
           <p class="mb-2 email">sugimoto[at]ice.inf.kyushu-u.ac.jp</p>
           <p class="mb-0">Music information processing</p>
@@ -136,7 +136,7 @@
 
   <footer class="footer_section">
     <div class="container">
-      <p>&copy; 2024 All Rights Reserved by ICE Lab.</p>
+      <p>&copy; 2025 All Rights Reserved by ICE Lab.</p>
     </div>
   </footer>
 
