--- a/publication.html
+++ b/publication.html
@@ -95,8 +95,8 @@
         <ol class="pub" reversed>
 
 <li>Tengyu Deng, Eita Nakamura, Ryo Nishikimi, Kazuyoshi Yoshii<br>
-<strong><font color="#222222">End-to-End Singing Transcription Based on CTC and HSMM Decoding with a Refined Score Representation</font></strong><br>
-<em>APSIPA Transactions on Signal and Information Processing</em>, to appear, 2024.<br>
+<strong><a href="https://www.nowpublishers.com/article/Details/SIP-20240016"><font color="#222222">End-to-end singing transcription based on CTC and HSMM decoding with a refined score representation</font></a></strong> <a href="https://www.nowpublishers.com/article/Details/SIP-20240016" target="_blank"><img src="https://eita-nakamura.github.io/images/externallink.png" height="18px" alt=""></a><br>
+<em>APSIPA Transactions on Signal and Information Processing</em>, Vol. 13, No. 5, e404, pp. 1-26, 2024.<br>
 
 <li>Eita Nakamura, Yasuyuki Saito<br>
 <strong><a href="https://eita-nakamura.github.io/articles/中村ら_絵画色彩スタイル進化_2024.pdf" target="_blank"><font color="#222222">Estimation of creator influences based on cultural evolution models of color styles in painting arts</font></a></strong> (in Japanese)<br>
@@ -232,6 +232,14 @@
         <h3 id="ConferencePaper"><font color="#990000">Conference Papers (Refereed) | 会議論文 (査読あり)</font></h3>
 
         <ol class="pub" reversed>
+
+<li>Fabian C. Moss, Eita Nakamura<br>
+<strong><a href="https://eita-nakamura.github.io/articles/Moss_etal_HarmonyEvolution_CHR2024.pdf" target="_blank"><font color="#222222">Modeling the evolution of harmony in popular music from different cultural contexts</font></a></strong> <a href="https://eita-nakamura.github.io/articles/Moss_etal_HarmonyEvolution_CHR2024.pdf" target="_blank"><img src="https://eita-nakamura.github.io/images/pdf.png" height="18px"></a><br>
+<em>Proc. 5th Conference on Computational Humanities Research (CHR)</em>, pp. 137-152, December 2024.
+
+<li>Francesco Foscarin, Emmanouil Karystinaios, Eita Nakamura, Gerhard Widmer<br>
+<strong><a href="https://eita-nakamura.github.io/articles/Foscarin_etal_VoiceAndStaffPrediction_ISMIR2024.pdf" target="_blank"><font color="#222222">Cluster and separate: a GNN approach to voice and staff prediction for score engraving</font></a></strong> <a href="https://eita-nakamura.github.io/articles/Foscarin_etal_VoiceAndStaffPrediction_ISMIR2024.pdf" target="_blank"><img src="https://eita-nakamura.github.io/images/pdf.png" height="18px"></a><br>
+<em>Proc. 25th International Society for Music Information Retrieval Conference (ISMIR)</em>, pp. 503-510, November 2024.
 
 <li>Takuto Nabeoka, Eita Nakamura, Kazuyoshi Yoshii<br>
 <strong><a href="https://eita-nakamura.github.io/articles/Nabeoka_BandOrchestration_CMMR2023.pdf" target="_blank"><font color="#222222">Automatic orchestration of piano scores for wind bands with user-specified instrumentation</font></a></strong> <a href="https://eita-nakamura.github.io/articles/Nabeoka_BandOrchestration_CMMR2023.pdf" target="_blank"><img src="https://eita-nakamura.github.io/images/pdf.png" height="18px"></a> <a href="https://nabeshinabe.github.io/PianoToBrassBand_nabeoka/demo.html" target="_blank"><button class="MyBtn PinkBtn">Demo</button></a> <a href="https://www.youtube.com/watch?v=dgwOB9mOCt8" target="_blank"><button class="MyBtn PinkBtn">Video</button></a> <a href="https://www.asahi.com/articles/ASR8N5V2PR6YPLBJ004.html?iref=pc_rensai_short_1910_article_5" target="_blank"><button class="MyBtn GreenBtn">Media</button></a><br>
@@ -458,6 +466,18 @@
         <h3 id="ConferenceTalks"><font color="#990000">Conference Talks (Unrefereed) | 学会発表 (査読なし)</font></h3>
 
         <ol class="pub" reversed>
+
+<li>Mai Takahashi, Michikazu Kobayashi, Eita Nakamura, Ikki Ohmukai<br>
+<strong><font color="#222222">Analysis of performance style by MIDI piano recordings</font></strong><br>
+<em>Proc. 13th Annual Conference of the Japanese Association for Digital Humanities (JADH)</em>, September 2024.
+
+<li>小田稜子, 中村栄太, 伊藤貴之<br>
+<strong><a href="https://eita-nakamura.github.io/articles/小田ら_画家影響度可視化_可視化情報シンポジウム2024.pdf" target="_blank"><font color="#222222">色彩スタイルにもとづく創作者の影響度の可視化</font></a></strong> <a href="https://eita-nakamura.github.io/articles/小田ら_画家影響度可視化_可視化情報シンポジウム2024.pdf" target="_blank"><img src="https://eita-nakamura.github.io/images/pdf.png" height="18px" alt=""></a><br>
+<em>第52回可視化情報シンポジウム</em>, No. OS9-2-3, pp. 1-5, July 2024.
+
+<li>高橋舞, 小林未知数, 中村栄太, 大向一輝<br>
+<strong><a href="https://eita-nakamura.github.io/articles/高橋ら_フレーズアーチング分析_音楽知覚認知学会2024.pdf" target="_blank"><font color="#222222">ピアノコンクールの審査結果におけるフレーズ・アーチングの分析</font></a></strong> <a href="https://eita-nakamura.github.io/articles/高橋ら_フレーズアーチング分析_音楽知覚認知学会2024.pdf" target="_blank"><img src="https://eita-nakamura.github.io/images/pdf.png" height="18px" alt=""></a><br>
+<em>日本音楽知覚認知学会2024年度春季研究発表会</em>, No. JSMPC2024(1)-5, pp. 1-6, June 2024.
 
 <li>平松祐紀, 中川慧, 高野海斗, 中村栄太<br>
 <strong>Stock to Music: 多変量株価時系列データの音楽変換</strong><br>
@@ -893,7 +913,7 @@ Invited Seminar at Institut de Recherche et Coordination Acoustique/Musique (IRC
 
   <footer class="footer_section">
     <div class="container">
-      <p>&copy; 2024 All Rights Reserved by ICE Lab.</p>
+      <p>&copy; 2025 All Rights Reserved by ICE Lab.</p>
     </div>
   </footer>
 
